phase 1 final changes

--- a/archive.html
+++ b/archive.html
@@ -14,7 +14,7 @@
   <body>
     <link rel="preload" as="image" href="https://drive.google.com/uc?id=12Gya8Wu5i4a5ZYYD1JNt68Y4EFcjeJEx">
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
