--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
@@ -45,7 +45,7 @@
               .unboundRegions()
               .enabled(true)
               .fill("#FFFFFF")
-              .stroke("#DEDEDE");
+              .stroke("#717171");
             map.
             overlapMode("allow-overlap");
             let createSeries = data => {
