--- a/sara.html
+++ b/sara.html
@@ -14,7 +14,7 @@
   <body>
     <link rel="preload" as="image" href="https://drive.google.com/uc?id=1hWHjvvFOGoNcUmHvxEheonaGZmYiu4Eb">
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
@@ -103,7 +103,7 @@
           </div>
           <div class="d-none" id="converse">
             <h6>About</h6>
-            <p class="py-3">The sketch by Sara, shows us her experience playing Hopscotch. Through her narration, we learn more about her time spent with her cousins, her fun childhood days, how she remembers and how her motivation to play games changed over time.</p>
+            <p class="py-3">The sketch by Sara, shows us her experience playing Hide and Seek. Through her narration, we learn more about her time spent with her cousins, her fun childhood days, how she remembers and how her motivation to play games changed over time.</p>
             <h6>Conversation</h6>
             <p class="py-3">
               Drawing is something i like to do. I felt confident expressing my thoughts. Even though I couldn't express each and everything, I could recall and draw. I felt sketching made it easier to express the totality of what happened. The colours express the good old days just got back. I recalled the old laughter and fun I had. "Balyakal smaranakal" (Childhood memories). <span class="snippet">My cousin Jo is denner of Hide and seek. He count's till  50. My sisters and brother hide around the house. I hide behind the mango tree cause its close by to go to the starting sat point.</span> <span class="snippet">My sisters hide near the shed.</span> <span class="snippet">Our family cat on the wall. brother hiding near the boundary wall.</span> <span class="snippet">We liked fooling our cousin, the denner. Making him lose was fun.</span> We also had more players, our neighbours. I couldn't sketch them in this scene, but they will be hiding in other parts of the house. <span class="snippet">The alphonso mango tree is what gives us shade and an epitome of our playing days. The area  around it is were we play and it would smell of mangoes and smoke from firewood stove used for cooking. Our house is the tharavad. So our cousins come over during summer holidays to play.</span><br><br>
@@ -117,10 +117,6 @@
           </div>
           <div class="d-flex align-items-center py-2 gap-2">
             <a href="map.html">Locate participant on the Interactive map</a>
-            <span class="material-icons">arrow_forward</span>
-          </div>
-          <div class="d-flex align-items-center py-2 gap-2">
-            <a href="data.html">Locate participant on the circumplex model</a>
             <span class="material-icons">arrow_forward</span>
           </div>
         </div>
