--- a/sketch.html
+++ b/sketch.html
@@ -22,7 +22,7 @@
     <link rel="preload" as="image" href="https://drive.google.com/uc?id=1lHzG4X5oXuE-sW_IPCUj1uRCLt1MVPJe">
     <link rel="preload" as="image" href="https://drive.google.com/uc?id=1_LzMRRXJq1leCD9d8xqobS7ycQNiiEgo">
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
