--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <body>
     <link rel="preload" as="image" href="https://drive.google.com/uc?id=1hpnOezsArTEQFVW42nw43sTlTcARGiEK">
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
