--- a/data.html
+++ b/data.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="fixed-top d-flex p-4" id="header">
-      <a class="me-auto" href="index.html">TGEA</a>
+      <a class="me-auto" href="content.html">TGEA</a>
       <a href="about.html">About</a>
       <span>Mute</span>
     </div>
