--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>the game experience archive</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
   </head>
 
@@ -59,8 +59,8 @@
       </div>
     </div>
     <div class="fixed-bottom d-flex justify-content-end align-items-center gap-2 p-4" id="scroll">
-      <span>Scroll to see more</span>
-      <span class="material-symbols-outlined">mouse</span>
+      <a id="link">Scroll to see more</a>
+      <span id="icon" class="material-icons">mouse</span>
     </div>
     <script>
       let urls = [
@@ -82,6 +82,17 @@
         setInterval(() => {
           $(".circle").eq(++active % 3).click();
         }, 5000)
+        $(window).scroll(function() {
+          let left = $("#description").offset().left;
+          let width = $("#description").outerWidth();
+          let total = $(window).width();
+          let scrolled = $(this).scrollLeft();
+          if (total > (left + width - scrolled)) {
+            $("#link").html("Discover more");
+            $("#link").attr("href", "content.html");
+            $("#icon").html("arrow_forward");
+          }
+        });
       });
     </script>
   </body>
